--- a/HeyWork/docker-compose.yml
+++ b/HeyWork/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.3'
 services:
     web:
-        build: ./src
+        build: ./web
         command: python manage.py runserver 0.0.0.0:8000
         volumes:
             - .:/project
