--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": ".venv/bin/python",
+    "python.pythonPath": "/usr/bin/python3",
     "sqltools.connections": [
         {
             "mysqlOptions": {
