--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "/usr/bin/python3",
+    "python.pythonPath": "C:\\Users\\whale\\AppData\\Local\\Programs\\Python\\Python38\\python.exe",
     "sqltools.connections": [
         {
             "previewLimit": 50,
