--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -25,7 +25,8 @@
     "jquery": "^3.5.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.10.3",
+    "jwt-decode":"3.1.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.4",
