change docker ports

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,7 @@ FROM python:3.8
 ENV PYTHONUNBUFFERED=1
 WORKDIR /heywork
 COPY server/ .
+COPY docker-entrypoint.sh .
 RUN pip install --no-cache-dir -r requirements.txt
-
-ENTRYPOINT ["python", "manage.py","runserver", "127.0.0.1:4200"]
+#ENTRYPOINT ["python", "manage.py","runserver", "0.0.0.0:8000"]
+ENTRYPOINT ["./docker-entrypoint.sh"]
