change dockerfile's entrypoint

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,10 @@
 FROM python:3.8
+
 ENV PYTHONUNBUFFERED=1
 WORKDIR /heywork
+
 COPY server/ .
 COPY docker-entrypoint.sh .
+
 RUN pip install --no-cache-dir -r requirements.txt
-ENTRYPOINT ["./docker-entrypoint.sh"]
+ENTRYPOINT ["sh","./docker-entrypoint.sh"]
