change creating order

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,8 +3,8 @@ FROM python:3.8
 ENV PYTHONUNBUFFERED=1
 WORKDIR /heywork
 
-COPY server/ .
+COPY server/ ./server/
 COPY docker-entrypoint.sh .
 
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r ./server/requirements.txt
 ENTRYPOINT ["sh","./docker-entrypoint.sh"]
