--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.2"
    
 services:
   db:
-    image: postgres:9.3
+    image: postgres
     #restart: always
     environment: 
       - POSTGRES_USER=postgres
@@ -12,17 +12,19 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     ports:
-      - "5433:5432"
+      - "5432:5432"
     
   server:
     #image: andys1mpson/heywork:backend
-    restart: always
+    #restart: always
     build: ./backend/
     environment: 
       - POSTGRES_USER=postgres
       - POSTGRES_DB=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_HOST=db
+    volumes:
+      - './backend/server:/heywork/server/'
     depends_on:
       - db
     links:
