--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,10 @@ services:
   db:
     image: postgres
     #restart: always
+
     environment: 
       - POSTGRES_USER=postgres
-      - POSTGRES_DB=postgres
+      - POSTGRES_DB=postgres_test
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_HOST=db
     volumes:
@@ -17,6 +18,7 @@ services:
   server:
     #image: andys1mpson/heywork:backend
     #restart: always
+
     build: ./backend/
     environment: 
       - POSTGRES_USER=postgres
