--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -7,13 +7,13 @@ server {
 
     location / {
         try_files $uri /index.html;
-    }
-
-    location /server {
+    } 
+    #(user|stack|users|order|customer|customer_orders|executor|returned_orders|executes_order|search|media|avatar) 
+    location /api {
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://server:4200;
+        proxy_pass http://server:8000;
     }
 }
