--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,10 +16,10 @@ services:
       - "5432:5432"
     
   server:
-    #image: andys1mpson/heywork:backend
+    image: andys1mpson/heywork:backend
     #restart: always
 
-    build: ./backend/
+    #build: ./backend/
     environment: 
       - POSTGRES_USER=postgres
       - POSTGRES_DB=postgres
@@ -36,9 +36,9 @@ services:
       - "8005:8000"
 
   angular-service:
-    #image: andys1mpson/heywork:frontend
+    image: andys1mpson/heywork:frontend
     container_name: angularcontainer
-    build: ./frontend/
+    #build: ./frontend/
     volumes:
       - './frontend/client/src:/heywork/client/src' 
     ports: 
